Big infrastructure change, Added login screen

--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "chatapp-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
+  }
 }
