--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.39.0",
     "socket.io": "^2.1.1"
   }
 }
