--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.3",
     "mysql2": "^1.6.1",
     "sequelize": "^4.39.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socketio-wildcard": "^2.0.0"
   }
 }
